Basic drag and drop

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	</div>
 	<script src="/dist/js/jquery.min.js"></script>
 	<script src="/dist/js/uikit.min.js"></script>
+	<script src="/dist/js/sortable.min.js"></script>
 	<script src="/dist/btbldr.js"></script>
 </body>
 </html>
