--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>BitBuilder. Responsive and Flexible Drag and Drop Layout Builder.</title>
+	<title>UnoBuilder. Responsive and Flexible Drag and Drop Layout Builder.</title>
 </head>
 
 <body>
@@ -11,7 +11,6 @@
 	</div>
 	<script src="/dist/js/jquery.min.js"></script>
 	<script src="/dist/js/uikit.min.js"></script>
-	<script src="/dist/js/sortable.min.js"></script>
 	<script src="/dist/btbldr.js"></script>
 </body>
 </html>
