--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<div id="app">
 		<layout></layout>
 	</div>
-	<script src="/dist/js/jquery.min.js"></script>
-	<script src="/dist/js/uikit.min.js"></script>
-	<script src="/dist/btbldr.js"></script>
+	<script src="./dist/js/jquery.min.js"></script>
+	<script src="./dist/js/uikit.min.js"></script>
+	<script src="./dist/unobuilder.js"></script>
 </body>
 </html>
