--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>UnoBuilder. Responsive and Flexible Drag and Drop Layout Builder.</title>
+<meta charset="utf-8">
+<title>UnoBuilder. Responsive and Flexible Drag and Drop Layout Builder.</title>
+<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
 </head>
-
 <body>
-	<div id="app">
-		<layout></layout>
-	</div>
-	<script src="./dist/js/jquery.min.js"></script>
-	<script src="./dist/js/uikit.min.js"></script>
-	<script src="./dist/unobuilder.js"></script>
+<div id="app">
+<layout></layout>
+</div>
+<script src="./dist/js/jquery.min.js" defer></script>
+<script src="./dist/js/uikit.min.js" defer>></script>
+<script src="./dist/js/components/accordion.min.js" defer>></script>
+<script src="./dist/unobuilder.js" defer>></script>
 </body>
 </html>
