Basic layout selector in canvas, and properties view

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div id="app">
-<layout></layout>
-</div>
+<div id="app"><layout></layout></div>
 <script src="./dist/js/jquery.min.js" defer></script>
 <script src="./dist/js/uikit.min.js" defer>></script>
 <script src="./dist/js/components/accordion.min.js" defer>></script>
-<script src="./dist/unobuilder.js" defer>></script>
+<script src="./dist/js/unobuilder.js" defer>></script>
 </body>
 </html>
