The current layout selector seems perfect right now

--- a/viewer.html
+++ b/viewer.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>UnoBuilder Layout Viewer</title>
 </head>
-<body class="body element" data-id="body" data-breadcrumb="body" @mouseover="over($event)" @mouseleave="leave($event)" @click="click($event)" @dragover="dragover($event)" @drop="drop($event)">
+<body class="body element" data-id="body" data-breadcrumb="body" @mouseover="over($event)" @mouseleave="leave($event)" @click="click($event)" @dragover="dragover($event)">
 <layout></layout>
 <script src="./dist/js/jquery.min.js" defer></script>
 <script src="./dist/js/uikit.min.js" defer>></script>
