Change js assets with cdnjs

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <title>UnoBuilder. Responsive and Flexible Drag and Drop Layout Builder.</title>
 <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/css/uikit.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="app"><layout></layout></div>
-<script src="./dist/js/jquery.min.js" defer></script>
-<script src="./dist/js/uikit.min.js" defer>></script>
-<script src="./dist/js/components/accordion.min.js" defer>></script>
-<script src="./dist/js/unobuilder.js" defer>></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/uikit.min.js" defer>></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/components/accordion.min.js" defer>></script>
+<script src="./app/unobuilder.js" defer>></script>
 </body>
 </html>
