--- a/viewer.html
+++ b/viewer.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>UnoBuilder Layout Viewer</title>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/css/uikit.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body class="body element" data-id="body" data-breadcrumb="body" @mouseover="over($event)" @mouseleave="leave($event)" @click="click($event)" @dragover="dragover($event)">
 <layout></layout>
-<script src="./dist/js/jquery.min.js" defer></script>
-<script src="./dist/js/uikit.min.js" defer>></script>
-<script src="./dist/js/unobuilder.viewer.js" defer>></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/uikit.min.js" defer>></script>
+<script src="./app/unobuilder.viewer.js" defer>></script>
 </body>
 </html>
