Support copy+paste+delete by pressing keyboard

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="app"><layout></layout></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/uikit.min.js" defer>></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/components/accordion.min.js" defer>></script>
-<script src="./app/unobuilder.js" defer>></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/uikit.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/components/accordion.min.js" defer></script>
+<script src="./app/unobuilder.js" defer></script>
 </body>
 </html>
