Hmmm continue next monday

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>UnoBuilder. Responsive and Flexible Drag and Drop Layout Builder.</title>
-<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 <link href='https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/css/uikit.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
