--- a/viewer.html
+++ b/viewer.html
@@ -4,16 +4,16 @@
 <meta charset="utf-8">
 <title>UnoBuilder Layout Viewer</title>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
-<link href='https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/css/uikit.min.css' rel='stylesheet' type='text/css'>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/css/uikit.min.css' rel='stylesheet' type='text/css'>
 </head>
-<body class="body element" data-id="body"
-@mouseover="over($event)"
-@mouseleave="leave($event)"
-@click="click($event)"
-@dragover="dragover($event)">
-<div class="wrapper"><layout></layout></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.2/js/uikit.min.js" defer></script>
-<script src="./app/unobuilder.viewer.js" defer></script>
+<body class="body" data-id="body"
+	@mouseleave="leave($event)"
+	@mouseover="over($event)"
+	@click="click($event)"
+	@dragover="dragover($event)">
+	<layout></layout>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
+	<script src="./app/unobuilder.viewer.js" defer></script>
 </body>
 </html>
