--- a/viewer.html
+++ b/viewer.html
@@ -9,8 +9,8 @@
 <body class="body" data-id="body"
 	@mouseleave="leave($event)"
 	@mouseover="over($event)"
-	@click="click($event)"
-	@dragover="dragover($event)">
+	@contextmenu="rightclick($event)"
+	@click="click($event)">
 	<layout></layout>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
