--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/components/accordion.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ext-language_tools.js" defer></script>
 <script src="./app/unobuilder.js" defer></script>
 <script src="./components/text/component.js" defer></script>
 </body>
