--- a/viewer.html
+++ b/viewer.html
@@ -13,6 +13,7 @@
 @contextmenu="rightclick($event)"
 @click="click($event)">
 <layout></layout>
+<style>{{{$root.customCSS}}}</style>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
