--- a/viewer-backup.html
+++ b/viewer-backup.html
@@ -6,11 +6,15 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 <link href='https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/css/uikit.min.css' rel='stylesheet' type='text/css'>
 </head>
-<body @mouseleave="leave($event)"
+<body>
+<div class="body" data-id="body"
+@mouseleave="leave($event)"
 @mouseover="over($event)"
-@click="click($event)"
-@contextmenu="rightclick($event)">
-<stylesheet></stylesheet>
+@contextmenu="rightclick($event)"
+@click="click($event)">
+<layout></layout>
+<style>{{{$root.customCSS}}}</style>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js" defer></script>
