--- a/viewer.html
+++ b/viewer.html
@@ -9,7 +9,8 @@
 <body @mouseleave="leave($event)"
 @mouseover="over($event)"
 @click="click($event)"
-@contextmenu="rightclick($event)">
+@contextmenu="rightclick($event)"
+:class="{'hide-overflow': dragging && componentClone}">
 <stylesheet></stylesheet>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
