--- a/viewer.html
+++ b/viewer.html
@@ -11,6 +11,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js" defer></script>
-<script src="./app/unobuilder.viewer.js" defer></script>
+<script src="./dist/unobuilder.viewer.js" defer></script>
 </body>
 </html>
