New implementation of component

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 
 <body>
-    <div id="app">
-        <builder v-ref:builder></builder>
-    </div>
+    <builder v-ref:builder></builder>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/uikit.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.26.3/js/components/accordion.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ext-language_tools.js" defer></script>
     <script src="./dist/unobuilder.js" defer></script>
+    <script src="./dist/example.js" defer></script>
 </body>
 </html>
