Reconstruct example page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <builder v-ref:builder></builder>
     <script src="./dist/unobuilder.js" defer></script>
-    <script src="./dist/example.js" defer></script>
+    <script src="./example/my-builder.js" defer></script>
 </body>
 </html>
