--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://djavaweb.github.io/; style-src 'self' https://djavaweb.github.io/ 'unsafe-inline';">
     <title>UnoBuilder</title>
   </head>
   <body>
